overflow fix

--- a/css/_features.scss
+++ b/css/_features.scss
@@ -151,7 +151,7 @@
   @media (max-width: 39.9375em){
     flex-wrap: wrap;
   }
-  margin-right: -15px;
+  //margin-right: -15px;
   margin-left: -15px;
 }
 
