--- a/css/main.css
+++ b/css/main.css
@@ -879,7 +879,6 @@ p.ui-dropdown-list-trigger {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: nowrap;
-  margin-right: -15px;
   margin-left: -15px;
 }
 
